# autumn-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  claude-progress.txt  cluster.sh  feature_list.md  perf_analysis.md  perf_baseline.json  perf_baseline_shm.json  perf_baseline_tcp_p1.json  perf_baseline_tcp_p1_d1.json  perf_baseline_tcp_p1_d1_s4k.json  perf_baseline_tcp_p1_d1_s8m.json  perf_baseline_tcp_p1_d8.json  perf_baseline_tcp_p1_d8_s4k.json  perf_baseline_tcp_p1_d8_s8m.json  perf_baseline_tcp_p8.json  perf_baseline_tcp_p8_d1.json  perf_baseline_tcp_p8_d1_s4k.json  perf_baseline_tcp_p8_d1_s8m.json  perf_baseline_tcp_p8_d8.json  perf_baseline_tcp_p8_d8_s4k.json  perf_baseline_tcp_p8_d8_s8m.json  perf_baseline_ucx.json  perf_baseline_ucx_p1_d1.json  perf_baseline_ucx_p1_d1_s4k.json  perf_baseline_ucx_p1_d8.json  perf_baseline_ucx_p8_d1.json  perf_baseline_ucx_p8_d1_s4k.json  perf_baseline_ucx_p8_d8.json  perf_baseline_ucx_p8_d8_s4k.json  perf_baseline_ucx_p8_d8_s8m.json  perf_check.sh
.github/workflows/: ci.yml
crates/client/: CLAUDE.md  Cargo.toml
crates/client/src/: lib.rs
crates/common/: CLAUDE.md  Cargo.toml
crates/common/src/: cpu_pin.rs  error.rs  lib.rs  metrics.rs  store.rs
crates/etcd/: CLAUDE.md  Cargo.toml
crates/etcd/src/: lib.rs  proto.rs  transport.rs
crates/etcd/tests/: concurrent_calls.rs
crates/fuse/: CLAUDE.md  Cargo.toml
crates/fuse/src/: bridge.rs  dir.rs  dispatch.rs  key.rs  lib.rs  main.rs  meta.rs  ops.rs  read.rs  schema.rs  state.rs  sync_task.rs  write.rs
crates/io-engine/: CLAUDE.md
crates/io-engine/benches/: write_throughput.rs
crates/io-engine/src/: blocking_io.rs  lib.rs  std_io.rs
crates/manager/: CLAUDE.md  Cargo.toml
crates/manager/src/: extent_delete.rs  lib.rs  recovery.rs  rpc_handlers.rs
crates/manager/tests/: append_benchmark.rs  ec_failover.rs  ec_integration.rs  etcd_stream_integration.rs  f109_offline_reconcile.rs  f109_physical_deletion.rs  f120_graceful_shutdown.rs  integration.rs  system_bulk_verification.rs  system_compound_failures.rs  system_concurrent_write_crash.rs  system_crash_mid_compact.rs  system_crash_mid_flush.rs  system_delete_tombstone.rs  system_extent_failover.rs  system_extent_recovery.rs  system_gc_chunked_read.rs  system_locked_by_other.rs  system_manager_failover.rs  system_multi_split_chain.rs  system_ps_failover.rs  system_ps_recovery.rs  system_range_split.rs  system_seal_during_writes.rs  system_split_gallery_originals.rs  system_split_large_values.rs  system_split_overlap.rs  system_split_ref_counting.rs  system_split_writes.rs  system_vp_after_split_gc.rs  update_stream_ec.rs
crates/manager/tests/support/: mod.rs
crates/manager/tests/support/embedded_etcd/: main.go
crates/partition-server/: CLAUDE.md  Cargo.toml
crates/partition-server/benches/: ps_bench.rs
crates/partition-server/src/: background.rs  lib.rs  rpc_handlers.rs  write_batch_builder.rs
crates/partition-server/src/sstable/: bloom.rs  builder.rs  format.rs  iterator.rs  mod.rs  reader.rs
crates/proto/: CLAUDE.md  build.rs
crates/proto/proto/: autumn.proto
crates/proto/src/: lib.rs
crates/rpc/: CLAUDE.md  Cargo.toml
crates/rpc/src/: client.rs  error.rs  frame.rs  lib.rs  manager_rpc.rs  partition_rpc.rs  pool.rs  server.rs
crates/rpc/tests/: round_trip.rs
crates/server/: CLAUDE.md  Cargo.toml
crates/stream/: CLAUDE.md  Cargo.toml
crates/stream/benches/: append_bench.rs  bench_results.md  extent_bench.rs
crates/stream/src/: client.rs  conn_pool.rs  erasure.rs  extent_node.rs  extent_rpc.rs  extent_worker.rs  lib.rs  wal.rs
crates/stream/tests/: ec_2pc_crash_safety.rs  extent_append_semantics.rs  extent_pipeline.rs  extent_restart_recovery.rs  extent_worker.rs  f021_multi_disk.rs  f099m_shards.rs  f109_extent_delete.rs  f119c_eversion_zero_skip.rs  f123_sealed_truncation_guard.rs  stream_sqcq.rs  test_helpers.rs  wal_recovery.rs
crates/transport/: Cargo.toml
crates/transport/benches/: transport_bench.rs
crates/transport/src/: lib.rs  probe.rs  tcp.rs
crates/transport/src/ucx/: endpoint.rs  ffi.rs  listener.rs  mod.rs  sockaddr.rs  worker.rs
crates/transport/tests/: init.rs  listen_validator.rs  loopback_tcp.rs  loopback_ucx.rs  probe.rs  tcp_basic.rs
crates/transport/tests/common/: mod.rs
crates/transport/ucx-sys-mini/: Cargo.toml  build.rs  wrapper.h
crates/transport/ucx-sys-mini/src/: lib.rs
docs/audit/: 2026-04-21-audit-summary.md  2026-04-21-extraction-crosscuts.md  2026-04-21-integration-inventory.md  2026-04-21-perf-check.md  2026-04-21-unit-coverage.md
docs/superpowers/diagnosis/: 2026-04-18-perf-r2-flamegraph-analysis.md
docs/superpowers/plans/: 2026-04-18-perf-r1-plan.md  2026-04-18-perf-r2-plan.md  2026-04-18-perf-r3-plan.md  2026-04-21-autumn-rs-audit-and-extraction.md  2026-04-23-f100-ucx-transport.md  2026-05-02-data-integrity-tests.md
docs/superpowers/specs/: 2026-04-18-perf-r1-partition-scale-out-design.md  2026-04-18-perf-r2-profile-then-optimize-design.md  2026-04-18-perf-r3-multiplex-pipeline-design.md  2026-04-18-perf-r4-sqcq-pipeline-design.md  2026-04-20-perf-f099-h-kernel-rtt.md  2026-04-20-perf-f099-n-ceiling.md  2026-04-20-perf-f099k-n4-diagnosis.md  2026-04-20-perf-r4-ceiling-diagnosis.md  2026-04-23-ucx-transport-design.md  (+2 more)
examples/gallery/: Cargo.toml  README.md
examples/gallery/src/: main.rs
examples/gallery/static/: index.html
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
scripts/: README.md  benchmark_append_stream.sh  check_roce.sh  manual_stream_test.sh  perf_r1_results.csv  perf_r1_sweep.sh  perf_r2_flamegraph.sh  perf_r2_thread_cpu.py  perf_ucx_baseline.sh
scripts/bpftrace_f099h/: sched_count.bt  syscall_summary.bt  syscall_v2.bt  tcp_sendmsg.bt  thread_syscall.bt  thread_syscall_v2.bt
scripts/perf_r2_svgs/: perf_r2_ps_n1_conn.svg.threads.txt  perf_r2_ps_n1_conn.thread_cpu.txt  perf_r2_ps_n1_full.svg.threads.txt  perf_r2_ps_n1_full.thread_cpu.txt  perf_r2_ps_n1_plog.svg.threads.txt  perf_r2_ps_n1_plog.thread_cpu.txt  perf_r2_ps_n4_full.svg.threads.txt  perf_r2_ps_n4_full.thread_cpu.txt
