[workspace]
members = [
  "crates/proto",
  "crates/common",
  "crates/io-engine",
  "crates/stream",
  "crates/manager",
  "crates/partition-server",
  "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
crossbeam-skiplist = "0.1"
dashmap = "6"
parking_lot = "0.12"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "fs", "io-util"] }
tonic = { version = "0.11", features = ["transport"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
