[workspace]
members = [
  "crates/common",
  "crates/io-engine",
  "crates/rpc",
  "crates/etcd",
  "crates/stream",
  "crates/manager",
  "crates/partition-server",
  "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
async-trait = "0.1"
crossbeam-skiplist = "0.1"
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "fs", "io-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
