[package]
name = "autumn-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
autumn-common = { path = "../common" }
autumn-proto = { path = "../proto" }
dashmap.workspace = true
etcd-client = "0.12"
parking_lot.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
autumn-io-engine = { path = "../io-engine" }
autumn-stream = { path = "../stream" }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing-subscriber = "0.3"
