[package]
name = "autumn-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
autumn-common = { path = "../common" }
autumn-etcd = { path = "../etcd" }
autumn-proto = { path = "../proto" }
autumn-rpc = { path = "../rpc" }
bytes.workspace = true
compio = { version = "0.18", features = ["net", "time", "macros"] }
prost.workspace = true
rkyv = { version = "0.8.15", features = ["alloc"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
autumn-stream = { path = "../stream" }
autumn-rpc = { path = "../rpc" }
compio = { version = "0.18", features = ["net", "time", "macros"] }
tempfile = "3"
tracing-subscriber = "0.3"
