[package]
name = "autumn-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
autumn-common = { path = "../common" }
autumn-etcd = { path = "../etcd" }
autumn-rpc = { path = "../rpc" }
autumn-transport = { path = "../transport" }
bytes.workspace = true
compio = { version = "0.18", features = ["net", "time", "macros"] }
rkyv = { version = "0.8.15", features = ["alloc"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
autumn-stream = { path = "../stream" }
autumn-partition-server = { path = "../partition-server" }
autumn-rpc = { path = "../rpc" }
autumn-etcd = { path = "../etcd" }
compio = { version = "0.18", features = ["net", "time", "macros"] }
tempfile = "3"
tracing-subscriber = "0.3"
anyhow = "1"
