[package]
name = "autumn-partition-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crossbeam-skiplist.workspace = true
prost.workspace = true
tokio = { version = "1", features = ["sync"] }
tracing.workspace = true
autumn-proto = { path = "../proto" }
autumn-rpc = { path = "../rpc" }
autumn-stream = { path = "../stream" }
compio = { version = "0.18", features = ["net", "time", "macros"] }
crc32c.workspace = true
xxhash-rust.workspace = true
rkyv = { version = "0.8.15", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
