[package]
name = "autumn-partition-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crossbeam-skiplist.workspace = true
dashmap.workspace = true
tracing.workspace = true
autumn-common = { path = "../common" }
autumn-rpc = { path = "../rpc" }
autumn-stream = { path = "../stream" }
compio = { version = "0.18", features = ["net", "time", "macros", "dispatcher"] }
crc32c.workspace = true
xxhash-rust.workspace = true
rkyv = { version = "0.8.15", features = ["alloc"] }
futures = "0.3"
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "ps_bench"
harness = false
