[package]
name = "autumn-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
autumn-transport = { path = "../transport" }
bytes.workspace = true
compio = { version = "0.18", features = ["net", "time", "macros"] }
rkyv = { version = "0.8.15", features = ["alloc"] }
thiserror.workspace = true
futures = "0.3"
tracing = "0.1"
