[package]
name = "autumn-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "autumn-manager-server"
path = "src/bin/manager.rs"

[[bin]]
name = "autumn-extent-node"
path = "src/bin/extent_node.rs"

[[bin]]
name = "autumn-ps"
path = "src/bin/partition_server.rs"

[[bin]]
name = "autumn-client"
path = "src/bin/autumn_client.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
autumn-manager = { path = "../manager" }
autumn-stream = { path = "../stream" }
autumn-io-engine = { path = "../io-engine" }
autumn-partition-server = { path = "../partition-server" }
autumn-rpc = { path = "../rpc" }
rkyv = { version = "0.8.15", features = ["alloc"] }
serde = { workspace = true }
serde_json = "1"
rand = "0.8"
uuid.workspace = true
libc = "0.2"
compio = { version = "0.18.0", features = ["macros"] }
