[package]
name = "autumn-stream"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crc32c.workspace = true
reed-solomon-erasure = "6"
dashmap.workspace = true
futures = "0.3"
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
tracing.workspace = true
autumn-proto = { path = "../proto" }
autumn-io-engine = { path = "../io-engine" }

[dev-dependencies]
tempfile = "3"
autumn-manager = { path = "../manager" }
