[package]
name = "autumn-stream"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crc32c.workspace = true
reed-solomon-erasure = "6"
dashmap.workspace = true
futures = "0.3"
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
tracing.workspace = true
autumn-proto = { path = "../proto" }
autumn-io-engine = { path = "../io-engine" }
autumn-rpc = { path = "../rpc" }
compio = { version = "0.18", features = ["net", "time", "macros", "dispatcher", "fs"] }
prost.workspace = true
libc = "0.2"
rkyv = { version = "0.8.15", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
autumn-manager = { path = "../manager" }
autumn-rpc = { path = "../rpc" }
autumn-io-engine = { path = "../io-engine" }
crc32c = "0.6"
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[bench]]
name = "append_bench"
harness = false

[[bench]]
name = "extent_bench"
harness = false
