[package]
name = "autumn-stream"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crc32c.workspace = true
reed-solomon-erasure = "6"
dashmap.workspace = true
futures = "0.3"
tracing.workspace = true
autumn-common = { path = "../common" }
autumn-rpc = { path = "../rpc" }
autumn-transport = { path = "../transport" }
compio = { version = "0.18", features = ["net", "time", "macros", "dispatcher", "fs"] }
libc = "0.2"
rkyv = { version = "0.8.15", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
autumn-manager = { path = "../manager" }
autumn-rpc = { path = "../rpc" }
bytes.workspace = true
crc32c = "0.6"
rkyv = { version = "0.8.15", features = ["alloc"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
compio = { version = "0.18", features = ["net", "time", "macros"] }

[[bench]]
name = "append_bench"
harness = false

[[bench]]
name = "extent_bench"
harness = false
