[package]
name = "autumn-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
ucx = []  # Phase 3 Task 13 will add: ucx = ["dep:ucx-sys-mini"]

[dependencies]
compio = { version = "0.18", features = ["net", "io", "macros"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
compio = { version = "0.18", features = ["net", "io", "macros", "time"] }
