[package]
name = "autumn-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
ucx = ["dep:ucx-sys-mini", "dep:libc", "dep:socket2"]

[dependencies]
compio = { version = "0.18", features = ["net", "io", "macros", "fs"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
bytes.workspace = true
thiserror.workspace = true
ucx-sys-mini = { path = "ucx-sys-mini", optional = true }
libc = { version = "0.2", optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }

[dev-dependencies]
compio = { version = "0.18", features = ["net", "io", "macros", "time"] }
