[package]
name = "gallery"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
autumn-client = { path = "../../crates/client" }
autumn-rpc = { path = "../../crates/rpc" }
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
compio = { version = "0.18", features = ["macros", "net"] }
axum = { version = "0.8", features = ["multipart"] }
cyper-axum = "0.8"
send_wrapper = { version = "0.6", features = ["futures"] }
mime_guess = "2"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
tempfile = "3"
