[package]
name = "ucx-sys-mini"
version = "0.1.0"
edition.workspace = true
license.workspace = true
links = "ucp"
description = "Minimal in-tree bindgen FFI for the ~40 UCP/UCX symbols autumn-transport needs (F100-UCX spec §13)."

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
